# LearnOpenGL

./: .clang-format  .gitignore  CMakeLists.txt
include/: glm-1.0.3.7z  graphics.h  settings.h  vertex_buffer.h  window.h
include/KHR/: khrplatform.h
include/core/: Application.h  Config.h
include/glad/: glad.h
include/platform/: GlfwUserData.h  InputHandle.h  WindowHandle.h
include/shader/: program.h  stage.h
include/types/: Dimensions.h
include/viewport/: dimensions.h  settings.h  window.h
libs/glfw/include/GLFW/: glfw3.h
shaders/: basic.vert
src/: glad.c  main.cpp  window.cpp
src/platform/: InputHandle.cpp  WindowHandle.cpp
src/shader/: program.cpp  stage.cpp
src/viewport/: dimensions.cpp  window.cpp
